--- a/front/package.json
+++ b/front/package.json
@@ -3,15 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {
-    "gulp-imagemin": "^6.1.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
     "gulp-cache": "^1.1.3",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^6.1.1",
     "gulp-rename": "^1.4.0",
     "gulp-uglify": "^3.0.2"
   },
