--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "gulp-cssnano": "^2.1.3",
     "gulp-imagemin": "^6.1.1",
     "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.2"
   },
   "scripts": {
